--- a/index.html
+++ b/index.html
@@ -9,4 +9,11 @@
       of the transition. For the duration of the transition, Dr.B simply used a <q>.duration()</q> link. This link is used to provide the transition
       with a time set on how long it will take to make the transition. Within the parenthesis of the <q>.duration()</q> tag, you put in numbers 
       but in milliseconds. So if you want a 1 second transition, you put (after the duration tag) <q>1000</q> because 1000 milliseconds is 1 second. 
-    
+      I also believe Dr.B used some of the extra functions like delay and ease. Delay was put before the duration because theres a delay to the transition.
+      Also the .ease was used for making the form of the transition. He obviously used an on click function for the transition to actually work when clicked on.
+        For the info given in chapter 10, my guess is that Dr.B used a sort function within d3 transition and added the CSS styling elements 
+        to give the colors (red or green) for people who have declined or improved in their exam scores. 
+      
+      </p>
+  </body>
+</html>
